Project

General

Profile

Actions

Bug #10831

closed

loader emulator ls command fails to detect file types

Added by Toomas Soome about 4 years ago. Updated about 4 years ago.

Status:
Closed
Priority:
Normal
Assignee:
Category:
lib - userland libraries
Start date:
2019-04-19
Due date:
% Done:

100%

Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
External Bug:

Description

We are allocating temporary buffer for file path but we provide wrong buffer size for snprintf(). Use asprintf() instead.

Actions #1

Updated by Electric Monk about 4 years ago

  • Status changed from In Progress to Closed
  • % Done changed from 90 to 100

git commit d9c27481e4cab76c5b1c7abf01b386f487b83573

commit  d9c27481e4cab76c5b1c7abf01b386f487b83573
Author: Toomas Soome <tsoome@me.com>
Date:   2019-05-15T07:05:15.000Z

    10831 loader emulator ls command fails to detect file types
    Reviewed by: Igor Kozhukhov <igor@dilos.org>
    Reviewed by: Youzhong Yang <youzhong@gmail.com>
    Reviewed by: Andy Fiddaman <andy@omniosce.org>
    Approved by: Dan McDonald <danmcd@joyent.com>

Actions

Also available in: Atom PDF