10831 loader emulator ls command fails to detect file types Reviewed by: Igor Kozhukhov <igor@dilos.org> Reviewed by: Youzhong Yang <youzhong@gmail.com> Reviewed by: Andy Fiddaman <andy@omniosce.org> Approved by: Dan McDonald <danmcd@joyent.com>